--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
           </p>
           <div class="description-more">
             <a href="">Read-more</a>
-            <a href="#about-me"><img src="arrow-right.png" alt="" /></a>
+            <a href="#about-me"><img src="./Photo/arrow-right.png" alt="" /></a>
           </div>
         </div>
 
         <div class="main-img">
-          <img src="./Foto/Profile-page1.png" alt="" />
+          <img src="./Photo/Profile-page1.png" alt="" />
         </div>
       </main>
 
       <main id="about-me">
         <div class="about-img">
-          <img src="./Foto/About-page2.jpg" alt="" />
+          <img src="./Photo/About-page2.jpg" alt="" />
         </div>
         <div class="about-description">
           <h1>ABOUT <span>ME</span></h1>
@@ -84,10 +84,10 @@
             <h1>JAVASCRIPT</h1>
           </div>
           <div class="skiils-logo overlay">
-            <img src="./Foto/HTML-logo.jpg" alt="" />
-            <img src="./Foto/CSS-logo.jpg" alt="" />
-            <img src="./Foto/Figma-logo.jpg" alt="" />
-            <img src="./Foto/JavaScript-logo.jpg" alt="" />
+            <img src="./Photo/HTML-logo.jpg" alt="" />
+            <img src="./Photo/CSS-logo.jpg" alt="" />
+            <img src="./Photo/Figma-logo.jpg" alt="" />
+            <img src="./Photo/JavaScript-logo.jpg" alt="" />
           </div>
         </div>
       </main>
@@ -97,12 +97,12 @@
           <h1>CONTACT <span>ME</span></h1>
         </div>
         <div class="contact-sosial">
-          <img src="./Foto/phone.png" alt="" />
+          <img src="./Photo/phone.png" alt="" />
           <div class="logo-sosial">
-            <img src="./Foto/instagram-logo.jpg" alt="" />
-            <img src="./Foto/tiktok-logo.jpg" alt="" />
-            <img src="./Foto/facebook-logo.jpg" alt="" />
-            <img src="./Foto/github-logo.jpg" alt="" />
+            <img src="./Photo/instagram-logo.jpg" alt="" />
+            <img src="./Photo/tiktok-logo.jpg" alt="" />
+            <img src="./Photo/facebook-logo.jpg" alt="" />
+            <img src="./Photo/github-logo.jpg" alt="" />
           </div>
           <div class="name-sosial">
             <p>ardimuh15_</p>
@@ -112,9 +112,9 @@
           </div>
         </div>
         <div class="contact-profile">
-          <img src="./Foto/contact-profile.jpg" alt="" />
+          <img src="./Photo/contact-profile.jpg" alt="" />
           <div class="phone">
-            <img src="./Foto/telphone.png" alt="" />
+            <img src="./Photo/telphone.png" alt="" />
             <p>+62 812-2296-4827</p>
           </div>
         </div>
